--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,156 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>TELL</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 <body>
-  <h1>jjjj</h1>
+  <div class="wrapper">
+    <div class="nav">
+      <div class="log">
+        <h4>TELL
+        <img src="/img/cat1.png" alt="" height="70px" width="120px">
+      </h4>
+      </div>
+      <div class="links">
+        <a href="index.html" class = "mainlink">HOME</a>
+        <a href="introduction.html">SIMPLEって？</a>
+        <a href="home.html">ユーザー</a>
+        <a href="game.html">試合</a>
+        <a href="relay.html">リレー</a>
+        <a href="manager.html">試合運営</a>
+      </div>
+    </div>
+
+    <!--LANDING PAGE-->
+
+    <div class="landing">
+      <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
+      <h1><span style="color: #1d3557;">TELL</span></h1>
+      <h3>今まで面倒だった試合の申込み、試合運営をスマートフォンを利用してどこからでも素早く簡単に行うことが出来ます。パソコンの準備や書類の郵送は必要ありません。</h3>
+      <div class="btn">
+        <a href="introduction.html">詳しく</a>
+      </div>
+    </div>
+    <div class="landingImage" data-aos="fade-down" data-aos-duration="1000">
+      <img src="/img/index1.png" alt="" height="650px" width="500px">
+    </div>
+    </div>
+
+    <!--ABOUT SECTION-->
+
+    <div class="about">
+      <div class="aboutImage" data-aos="fade-right" data-aos-duration="1000">
+        <img src="/img/index2.png" alt="">
+      </div>
+    <div class= "aboutText" data-aos="fade-left" data-aos-duration="1000">
+    <h1><span style="color: #1d3557;">登録は簡単　無料</span></h1>
+     <h3>アプリをダウンロードし、ユーザー情報を登録してすぐに利用ができます。登録は簡単です。<br>
+        ⚠️SIMPLEは「陸協登録」を行っていることが前提のアプリです。(詳しくは日本陸上連合のホームページをご覧下さい。)
+    </h3>
+    </div>
+  </div>
+
+      <!--LANDING PAGE-->
+
+      <div class="landing">
+        <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
+        <h1><span style="color: #1d3557;">TELL</span></h1>
+        <h3>今まで面倒だった試合の申込み、試合運営をスマートフォンを利用してどこからでも素早く簡単に行うことが出来ます。パソコンの準備や書類の郵送は必要ありません。</h3>
+      </div>
+      <div class="landingImage" data-aos="fade-down" data-aos-duration="1000">
+        <img src="/img/index3.png" alt="" height="650px" width="500px">
+      </div>
+      </div>
+  
+      <!--ABOUT SECTION-->
+  
+      <div class="about">
+        <div class="aboutImage" data-aos="fade-right" data-aos-duration="1000">
+          <img src="/img/index4.png" alt="">
+        </div>
+      <div class= "aboutText" data-aos="fade-left" data-aos-duration="1000">
+      <h1><span style="color: #1d3557;">登録は簡単　無料</span></h1>
+       <h3>アプリをダウンロードし、ユーザー情報を登録してすぐに利用ができます。登録は簡単です。<br>
+          ⚠️SIMPLEは「陸協登録」を行っていることが前提のアプリです。(詳しくは日本陸上連合のホームページをご覧下さい。)
+      </h3>
+      </div>
+    </div>
+
+    <!-- INFO SECTION-->
+
+      <div class="infoCards">
+        <div class="card one" data-aos="fade-up" data-aos-duration="1100">
+          <img src="img/cathome.png" class="cardoneImg" alt =""data-aos="fade-up" data-aos-duration="1200">
+          <div class="cardbgone"></div>
+          <div class="cardContent">
+            <h2>情報の登録　日記</h2>
+            <p>ユーザー情報を登録し試合申し込みを簡単にします。日記機能も利用できます。</p>
+            <a href="home.html">
+              <div class="cardBtn">
+                <img src="img/red.png" alt="" class="cardIcon">
+              </div>
+              </a>
+          </div>
+        </div>
+
+        <div class="card two"data-aos="fade-up" data-aos-duration="1300">
+          <img src="img/cat2.png" class="cardtwoImg" alt =""data-aos="fade-up" data-aos-duration="1200">
+          <div class="cardbgtwo"></div>
+          <div class="cardContent">
+            <h2>試合申込み</h2>
+            <p>本来の試合申込みフローより、簡単に、シンプルに試合に申し込むことが出来ます。 </p> 
+            <p>試合結果を保存することが出来ます。</p>
+            <a href="game.html">
+              <div class="cardBtn">
+                <img src="img/blue.png" alt="" class="cardIcon">
+              </div>
+              </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+      <div class="infoCardstwo">
+        <div class="card three" data-aos="fade-up" data-aos-duration="1100">
+          <img src="img/cat3.png" class="cardthreeImg" alt =""data-aos="fade-up" data-aos-duration="1200">
+          <div class="cardbgthree"></div>
+          <div class="cardContent">
+            <h2>リレー申込み</h2>
+            <p>リレーオーダー表の提出を自由な場所で簡単に、スマートフォンから行うことが出来ます。</p>
+            <a href="relay.html">
+              <div class="cardBtn">
+                <img src="img/yelow.png" alt="" class="cardIcon">
+              </div>
+              </a>
+          </div>
+        </div>
+
+        <div class="card four"data-aos="fade-up" data-aos-duration="1300">
+          <img src="img/cat4.png" class="cardfourImg" alt =""data-aos="fade-up" data-aos-duration="1200">
+          <div class="cardbgfour"></div>
+          <div class="cardContent">
+            <h2>試合運営</h2>
+            <p>面倒だった試合作成、申込みの処理、リレーオーダー表の処理をシステムが手助けしてくれます。</p>
+            <a href="manager.html">
+              <div class="cardBtn">
+                <img src="img/green.png" alt="" class="cardIcon">
+              </div>
+              </a>
+          </div>
+        </div>
+      </div>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
+  </div>
 </body>
 </html>
