--- a/public/index.html
+++ b/public/index.html
@@ -14,16 +14,16 @@
     <div class="nav">
       <div class="log">
         <h4>TELL
-        <img src="/img/cat1.png" alt="" height="70px" width="120px">
+        <img src="/img/tell1.png" alt="" height="50px" width="50px">
       </h4>
       </div>
       <div class="links">
         <a href="index.html" class = "mainlink">HOME</a>
-        <a href="introduction.html">SIMPLEって？</a>
-        <a href="home.html">ユーザー</a>
-        <a href="game.html">試合</a>
-        <a href="relay.html">リレー</a>
-        <a href="manager.html">試合運営</a>
+        <a href="home.html">TELLって？</a>
+        <a href="home.html">登録方法</a>
+        <a href="game.html">指導を受けよう</a>
+        <a href="relay.html">コーチを探そう</a>
+        <a href="manager.html">ユーザー設定</a>
       </div>
     </div>
 
@@ -32,10 +32,7 @@
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
       <h1><span style="color: #1d3557;">TELL</span></h1>
-      <h3>今まで面倒だった試合の申込み、試合運営をスマートフォンを利用してどこからでも素早く簡単に行うことが出来ます。パソコンの準備や書類の郵送は必要ありません。</h3>
-      <div class="btn">
-        <a href="introduction.html">詳しく</a>
-      </div>
+      <h3>スマートフォンで部活動をしましょう。</h3>
     </div>
     <div class="landingImage" data-aos="fade-down" data-aos-duration="1000">
       <img src="/img/index1.png" alt="" height="650px" width="500px">
@@ -49,21 +46,21 @@
         <img src="/img/index2.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-left" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">登録は簡単　無料</span></h1>
-     <h3>アプリをダウンロードし、ユーザー情報を登録してすぐに利用ができます。登録は簡単です。<br>
-        ⚠️SIMPLEは「陸協登録」を行っていることが前提のアプリです。(詳しくは日本陸上連合のホームページをご覧下さい。)
+    <h1><span style="color: #1d3557;">いつでも　どこからでも</span></h1>
+     <h3>チャット機能を利用し,いつでも、どこからでもコーチから指導を受ける事ができます。自分の悩みや
+       疑問、課題を相談してみましょう。（指導は有料です。料金は選手によって異なります。）
     </h3>
     </div>
   </div>
 
       <!--LANDING PAGE-->
 
-      <div class="landing">
-        <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-        <h1><span style="color: #1d3557;">TELL</span></h1>
-        <h3>今まで面倒だった試合の申込み、試合運営をスマートフォンを利用してどこからでも素早く簡単に行うことが出来ます。パソコンの準備や書類の郵送は必要ありません。</h3>
+      <div class="landing2">
+        <div class= "landingText2" data-aos="fade-up" data-aos-duration="1000">
+        <h1><span style="color: #1d3557;">たくさんのコーチ</span></h1>
+        <h3>様々な経歴を持ったコーチがいらっしゃいます。自分の悩みや課題に合ったコーチを探してみましょう。</h3>
       </div>
-      <div class="landingImage" data-aos="fade-down" data-aos-duration="1000">
+      <div class="landingImage2" data-aos="fade-down" data-aos-duration="1000">
         <img src="/img/index3.png" alt="" height="650px" width="500px">
       </div>
       </div>
@@ -75,9 +72,9 @@
           <img src="/img/index4.png" alt="">
         </div>
       <div class= "aboutText" data-aos="fade-left" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">登録は簡単　無料</span></h1>
-       <h3>アプリをダウンロードし、ユーザー情報を登録してすぐに利用ができます。登録は簡単です。<br>
-          ⚠️SIMPLEは「陸協登録」を行っていることが前提のアプリです。(詳しくは日本陸上連合のホームページをご覧下さい。)
+      <h1><span style="color: #1d3557;">指導者になろう</span></h1>
+       <h3>アプリケーション内で指導者登録する事で自分だけの陸上教室を作る事ができます。
+            自分の想像力や経験を利用し、選手の力になりませんか？
       </h3>
       </div>
     </div>
@@ -86,29 +83,29 @@
 
       <div class="infoCards">
         <div class="card one" data-aos="fade-up" data-aos-duration="1100">
-          <img src="img/cathome.png" class="cardoneImg" alt =""data-aos="fade-up" data-aos-duration="1200">
+          <img src="img/card1.png" class="cardoneImg" alt =""data-aos="fade-up" data-aos-duration="1200" >
           <div class="cardbgone"></div>
           <div class="cardContent">
-            <h2>情報の登録　日記</h2>
-            <p>ユーザー情報を登録し試合申し込みを簡単にします。日記機能も利用できます。</p>
+            <h2>ユーザー登録　指導者登録</h2>
+            <p>登録は簡単で無料で使用する事ができます</p>
             <a href="home.html">
               <div class="cardBtn">
-                <img src="img/red.png" alt="" class="cardIcon">
+                <img src="img/arrow.png" alt="" class="cardIcon">
               </div>
               </a>
           </div>
         </div>
 
         <div class="card two"data-aos="fade-up" data-aos-duration="1300">
-          <img src="img/cat2.png" class="cardtwoImg" alt =""data-aos="fade-up" data-aos-duration="1200">
+          <img src="img/card2.png" class="cardtwoImg" alt =""data-aos="fade-up" data-aos-duration="1200">
           <div class="cardbgtwo"></div>
           <div class="cardContent">
-            <h2>試合申込み</h2>
+            <h2>ユーザー設定をしよう！</h2>
             <p>本来の試合申込みフローより、簡単に、シンプルに試合に申し込むことが出来ます。 </p> 
             <p>試合結果を保存することが出来ます。</p>
             <a href="game.html">
               <div class="cardBtn">
-                <img src="img/blue.png" alt="" class="cardIcon">
+                <img src="img/arrow.png" alt="" class="cardIcon">
               </div>
               </a>
           </div>
@@ -118,28 +115,28 @@
   
       <div class="infoCardstwo">
         <div class="card three" data-aos="fade-up" data-aos-duration="1100">
-          <img src="img/cat3.png" class="cardthreeImg" alt =""data-aos="fade-up" data-aos-duration="1200">
+          <img src="img/card3.png" class="cardthreeImg" alt =""data-aos="fade-up" data-aos-duration="1200">
           <div class="cardbgthree"></div>
           <div class="cardContent">
-            <h2>リレー申込み</h2>
+            <h2>コーチを探そう！</h2>
             <p>リレーオーダー表の提出を自由な場所で簡単に、スマートフォンから行うことが出来ます。</p>
             <a href="relay.html">
               <div class="cardBtn">
-                <img src="img/yelow.png" alt="" class="cardIcon">
+                <img src="img/arrow.png" alt="" class="cardIcon">
               </div>
               </a>
           </div>
         </div>
 
         <div class="card four"data-aos="fade-up" data-aos-duration="1300">
-          <img src="img/cat4.png" class="cardfourImg" alt =""data-aos="fade-up" data-aos-duration="1200">
+          <img src="img/card4.png" class="cardfourImg" alt =""data-aos="fade-up" data-aos-duration="1200">
           <div class="cardbgfour"></div>
           <div class="cardContent">
-            <h2>試合運営</h2>
+            <h2>指導を受けよう！</h2>
             <p>面倒だった試合作成、申込みの処理、リレーオーダー表の処理をシステムが手助けしてくれます。</p>
             <a href="manager.html">
               <div class="cardBtn">
-                <img src="img/green.png" alt="" class="cardIcon">
+                <img src="img/arrow.png" alt="" class="cardIcon">
               </div>
               </a>
           </div>
