--- a/public/hometwo.html
+++ b/public/hometwo.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TELL</title>
-  <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="hometwo.css">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -30,8 +30,8 @@
   <!--hero-->
   <div class="hero">
     <div class="btn-box">
-      <a href="home.html"class = "mainlinks">TELL</a>
-      <a href="hometwo.html">登録方法</a>
+      <a href="home.html">TELL</a>
+      <a href="hometwo.html"class = "mainlinks">登録方法</a>
       <a href="homethree.html">指導者になろう</a>
     </div>
 
@@ -44,7 +44,7 @@
           また、日々の練習内容を記録できる「陸上日記」サービスもご利用できます。</h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
-      <img src="/img/home.png" alt="" height="650px" width="500px">
+      <img src="/img/hometwo1.png" alt="" height="650px" width="500px">
     </div>
     </div>
 
@@ -52,7 +52,7 @@
 
     <div class="about">
       <div class="aboutImage" data-aos="fade-up" data-aos-duration="1000">
-        <img src="/img/home1.png" alt="">
+        <img src="/img/hometwo2.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
     <h1><span style="color: #1d3557;">１度だけ</span></h1>
@@ -62,32 +62,7 @@
     </div>
   </div>
 
-    <!--3-->
-    <div class="landing">
-      <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">ひと目で</span></h1>
-      <h3>ユーザー情報は「メールアドレスとユーザーパス」を利用してはいつでも「閲覧」「編集」ができます。
-      </h3>
-    </div>
-    <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
-      <img src="/img/home2.png" alt="" height="650px" width="500px">
-    </div>
-    </div>
-
-        <!--4-->
-        <!--ABOUT SECTION-->
-
-    <div class="about">
-      <div class="aboutImage" data-aos="fade-up" data-aos-duration="1000">
-        <img src="/img/home3.png" alt="">
-      </div>
-    <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">今日の練習は？</span></h1>
-     <h3>「陸上日記」は日々の練習メニューや気持ちなどを誰にも見られることなく自由に記録できます。
-     </h3>
-    </div>
-  </div>
-
+ 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
