--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,9 @@
       <div class="links">
         <a href="index.html" class = "mainlink">HOME</a>
         <a href="home.html">TELLって？</a>
-        <a href="home.html">登録方法</a>
-        <a href="game.html">指導を受けよう</a>
-        <a href="relay.html">コーチを探そう</a>
-        <a href="manager.html">ユーザー設定</a>
+        <a href="search.html">コーチを探そう</a>
+        <a href="message.html">指導を受けよう</a>
+        <a href="setting.html">ユーザー設定</a>
       </div>
     </div>
 
@@ -47,8 +46,8 @@
       </div>
     <div class= "aboutText" data-aos="fade-left" data-aos-duration="1000">
     <h1><span style="color: #1d3557;">いつでも　どこからでも</span></h1>
-     <h3>チャット機能を利用し,いつでも、どこからでもコーチから指導を受ける事ができます。自分の悩みや
-       疑問、課題を相談してみましょう。（指導は有料です。料金は選手によって異なります。）
+     <h3>チャット機能を利用し、いつでも、どこからでもコーチから指導を受ける事ができます。自分の悩みや
+       疑問、課題を相談してみましょう。（指導は有料です。料金はコーチによって異なります。）
     </h3>
     </div>
   </div>
