--- a/public/message.html
+++ b/public/message.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TELL</title>
-  <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="message.css">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -20,9 +20,9 @@
       </div>
       <div class="links">
         <a href="index.html" >HOME</a>
-        <a href="home.html"class = "mainlink">TELLって？</a>
+        <a href="home.html">TELLって？</a>
         <a href="search.html">コーチを探そう</a>
-        <a href="message.html">指導を受けよう</a>
+        <a href="message.html"class = "mainlink">指導を受けよう</a>
         <a href="setting.html">ユーザー設定</a>
       </div>
     </div>
@@ -30,9 +30,8 @@
   <!--hero-->
   <div class="hero">
     <div class="btn-box">
-      <a href="home.html"class = "mainlinks">TELL</a>
-      <a href="hometwo.html">登録方法</a>
-      <a href="homethree.html">指導者になろう</a>
+      <a href="message.html"class = "mainlinks">指導の流れ</a>
+      <a href="messagetwo.html">システム</a>
     </div>
 
     <!--LANDING PAGE-->
@@ -44,7 +43,7 @@
           また、日々の練習内容を記録できる「陸上日記」サービスもご利用できます。</h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
-      <img src="/img/home.png" alt="" height="650px" width="500px">
+      <img src="/img/message.png" alt="" height="650px" width="500px">
     </div>
     </div>
 
@@ -52,7 +51,7 @@
 
     <div class="about">
       <div class="aboutImage" data-aos="fade-up" data-aos-duration="1000">
-        <img src="/img/home1.png" alt="">
+        <img src="/img/message2.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
     <h1><span style="color: #1d3557;">１度だけ</span></h1>
@@ -70,7 +69,7 @@
       </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
-      <img src="/img/home2.png" alt="" height="650px" width="500px">
+      <img src="/img/message3.png" alt="" height="650px" width="500px">
     </div>
     </div>
 
@@ -79,7 +78,7 @@
 
     <div class="about">
       <div class="aboutImage" data-aos="fade-up" data-aos-duration="1000">
-        <img src="/img/home3.png" alt="">
+        <img src="/img/message4.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
     <h1><span style="color: #1d3557;">今日の練習は？</span></h1>
@@ -87,6 +86,31 @@
      </h3>
     </div>
   </div>
+
+ <!--5-->
+ <div class="landing">
+  <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
+  <h1><span style="color: #1d3557;">ひと目で</span></h1>
+  <h3>ユーザー情報は「メールアドレスとユーザーパス」を利用してはいつでも「閲覧」「編集」ができます。
+  </h3>
+</div>
+<div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
+  <img src="/img/message5.png" alt="" height="650px" width="500px">
+</div>
+</div>
+
+    <!--6-->
+
+<div class="about">
+  <div class="aboutImage" data-aos="fade-up" data-aos-duration="1000">
+    <img src="/img/message6.png" alt="">
+  </div>
+<div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
+<h1><span style="color: #1d3557;">今日の練習は？</span></h1>
+ <h3>「陸上日記」は日々の練習メニューや気持ちなどを誰にも見られることなく自由に記録できます。
+ </h3>
+</div>
+</div>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
