--- a/public/homethree.html
+++ b/public/homethree.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TELL</title>
-  <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="homethree.html">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -30,39 +30,12 @@
   <!--hero-->
   <div class="hero">
     <div class="btn-box">
-      <a href="home.html"class = "mainlinks">TELL</a>
+      <a href="home.html">TELL</a>
       <a href="hometwo.html">登録方法</a>
-      <a href="homethree.html">指導者になろう</a>
+      <a href="homethree.html"class = "mainlinks">指導者になろう</a>
     </div>
 
-    <!--LANDING PAGE-->
-
-    <div class="landing">
-      <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">HOME</span></h1>
-        <h3>ユーザー情報を「登録」「閲覧」「編集」できるページです。
-          また、日々の練習内容を記録できる「陸上日記」サービスもご利用できます。</h3>
-    </div>
-    <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
-      <img src="/img/home.png" alt="" height="650px" width="500px">
-    </div>
-    </div>
-
-    <!--ABOUT SECTION-->
-
-    <div class="about">
-      <div class="aboutImage" data-aos="fade-up" data-aos-duration="1000">
-        <img src="/img/home1.png" alt="">
-      </div>
-    <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">１度だけ</span></h1>
-     <h3>登録を行うことで試合申込み時に自動的に「選手名」
-       「登録陸連」「所属団体」などの試合申込み時に必要な情報が入力されます。何度も記入する手間が省けます。
-     </h3>
-    </div>
-  </div>
-
-    <!--3-->
+    <!--1-->
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
       <h1><span style="color: #1d3557;">ひと目で</span></h1>
@@ -70,16 +43,62 @@
       </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
-      <img src="/img/home2.png" alt="" height="650px" width="500px">
+      <img src="/img/hometwo2.png" alt="" height="650px" width="500px">
+    </div>
+    </div>
+
+        <!--2-->
+    <div class="about">
+      <div class="aboutImage" data-aos="fade-up" data-aos-duration="1000">
+        <img src="/img/hometwo3.png" alt="">
+      </div>
+    <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
+    <h1><span style="color: #1d3557;">今日の練習は？</span></h1>
+     <h3>「陸上日記」は日々の練習メニューや気持ちなどを誰にも見られることなく自由に記録できます。
+     </h3>
+    </div>
+  </div>
+
+     <!--3-->
+     <div class="landing">
+      <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
+      <h1><span style="color: #1d3557;">ひと目で</span></h1>
+      <h3>ユーザー情報は「メールアドレスとユーザーパス」を利用してはいつでも「閲覧」「編集」ができます。
+      </h3>
+    </div>
+    <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
+      <img src="/img/hometwo4.png" alt="" height="650px" width="500px">
     </div>
     </div>
 
         <!--4-->
-        <!--ABOUT SECTION-->
-
     <div class="about">
       <div class="aboutImage" data-aos="fade-up" data-aos-duration="1000">
-        <img src="/img/home3.png" alt="">
+        <img src="/img/hometwo5.png" alt="">
+      </div>
+    <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
+    <h1><span style="color: #1d3557;">今日の練習は？</span></h1>
+     <h3>「陸上日記」は日々の練習メニューや気持ちなどを誰にも見られることなく自由に記録できます。
+     </h3>
+    </div>
+  </div>
+
+     <!--5-->
+     <div class="landing">
+      <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
+      <h1><span style="color: #1d3557;">ひと目で</span></h1>
+      <h3>ユーザー情報は「メールアドレスとユーザーパス」を利用してはいつでも「閲覧」「編集」ができます。
+      </h3>
+    </div>
+    <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
+      <img src="/img/hometwo6.png" alt="" height="650px" width="500px">
+    </div>
+    </div>
+
+            <!--4-->
+    <div class="about">
+      <div class="aboutImage" data-aos="fade-up" data-aos-duration="1000">
+        <img src="/img/hometwo7.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
     <h1><span style="color: #1d3557;">今日の練習は？</span></h1>
