--- a/public/setting.html
+++ b/public/setting.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TELL</title>
-  <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="setting.css">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -20,10 +20,10 @@
       </div>
       <div class="links">
         <a href="index.html" >HOME</a>
-        <a href="home.html"class = "mainlink">TELLって？</a>
+        <a href="home.html">TELLって？</a>
         <a href="search.html">コーチを探そう</a>
         <a href="message.html">指導を受けよう</a>
-        <a href="setting.html">ユーザー設定</a>
+        <a href="setting.html"class = "mainlink">ユーザー設定</a>
       </div>
     </div>
   
