ページ追加

--- a/public/settingtwo.html
+++ b/public/settingtwo.html
@@ -30,8 +30,8 @@
   <!--hero-->
   <div class="hero">
     <div class="btn-box">
-      <a href="setting.html"class = "mainlinks">選手情報の設定</a>
-      <a href="settingtwo.html">指導者情報の設定</a>
+      <a href="setting.html">選手情報の設定</a>
+      <a href="settingtwo.html"class = "mainlinks">指導者情報の設定</a>
     </div>
 
     <!--LANDING PAGE-->
@@ -43,7 +43,7 @@
           また、日々の練習内容を記録できる「陸上日記」サービスもご利用できます。</h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
-      <img src="/img/setting.png" alt="" height="650px" width="500px">
+      <img src="/img/settingtwo.png" alt="" height="650px" width="500px">
     </div>
     </div>
 
@@ -51,7 +51,7 @@
 
     <div class="about">
       <div class="aboutImage" data-aos="fade-up" data-aos-duration="1000">
-        <img src="/img/setting2.png" alt="">
+        <img src="/img/settingtwo2.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
     <h1><span style="color: #1d3557;">１度だけ</span></h1>
@@ -69,14 +69,14 @@
       </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
-      <img src="/img/setting3.png" alt="" height="650px" width="500px">
+      <img src="/img/settingtwo3.png" alt="" height="650px" width="500px">
     </div>
     </div>
 
         <!--4-->
     <div class="about">
       <div class="aboutImage" data-aos="fade-up" data-aos-duration="1000">
-        <img src="/img/setting4.png" alt="">
+        <img src="/img/settingtwo4.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
     <h1><span style="color: #1d3557;">今日の練習は？</span></h1>
@@ -84,6 +84,30 @@
      </h3>
     </div>
   </div>
+
+   <!--5-->
+   <div class="landing">
+    <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
+    <h1><span style="color: #1d3557;">ひと目で</span></h1>
+    <h3>ユーザー情報は「メールアドレスとユーザーパス」を利用してはいつでも「閲覧」「編集」ができます。
+    </h3>
+  </div>
+  <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
+    <img src="/img/settingtwo5.png" alt="" height="650px" width="500px">
+  </div>
+  </div>
+
+      <!--6-->
+  <div class="about">
+    <div class="aboutImage" data-aos="fade-up" data-aos-duration="1000">
+      <img src="/img/settingtwo6.png" alt="">
+    </div>
+  <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
+  <h1><span style="color: #1d3557;">今日の練習は？</span></h1>
+   <h3>「陸上日記」は日々の練習メニューや気持ちなどを誰にも見られることなく自由に記録できます。
+   </h3>
+  </div>
+</div>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
