--- a/public/home.html
+++ b/public/home.html
@@ -39,9 +39,8 @@
 
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">HOME</span></h1>
-        <h3>ユーザー情報を「登録」「閲覧」「編集」できるページです。
-          また、日々の練習内容を記録できる「陸上日記」サービスもご利用できます。</h3>
+      <h1><span style="color: #1d3557;">TELL</span></h1>
+        <h3>スマートフォンを利用し自分が選んだコーチから指導を受ける事ができます。</h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
       <img src="/img/home.png" alt="" height="650px" width="500px">
@@ -55,9 +54,9 @@
         <img src="/img/home1.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">１度だけ</span></h1>
-     <h3>登録を行うことで試合申込み時に自動的に「選手名」
-       「登録陸連」「所属団体」などの試合申込み時に必要な情報が入力されます。何度も記入する手間が省けます。
+    <h1><span style="color: #1d3557;">写真やメッセージでの指導</span></h1>
+     <h3>写真やメッセージを利用してコーチと直接やりとりができます。
+       学校の休み時間や仕事帰りなどの空いた時間を利用しましょう。
      </h3>
     </div>
   </div>
@@ -65,8 +64,9 @@
     <!--3-->
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">ひと目で</span></h1>
-      <h3>ユーザー情報は「メールアドレスとユーザーパス」を利用してはいつでも「閲覧」「編集」ができます。
+      <h1><span style="color: #1d3557;">自分だけの陸上教室を作ろう</span></h1>
+      <h3>指導者登録は簡単です。選手とはメッセージでのやり取りとなるため、空いた時間に
+        指導する事ができます。
       </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
@@ -75,15 +75,13 @@
     </div>
 
         <!--4-->
-        <!--ABOUT SECTION-->
-
     <div class="about">
       <div class="aboutImage" data-aos="fade-up" data-aos-duration="1000">
         <img src="/img/home3.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">今日の練習は？</span></h1>
-     <h3>「陸上日記」は日々の練習メニューや気持ちなどを誰にも見られることなく自由に記録できます。
+    <h1><span style="color: #1d3557;">自分にあったコーチを探そう</span></h1>
+     <h3>悩みや課題は人それぞれです。コーチを探し自分の課題を克服しましょう！
      </h3>
     </div>
   </div>
