--- a/public/homethree.html
+++ b/public/homethree.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TELL</title>
-  <link rel="stylesheet" href="homethree.html">
+  <link rel="stylesheet" href="homethree.css">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -38,8 +38,8 @@
     <!--1-->
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">ひと目で</span></h1>
-      <h3>ユーザー情報は「メールアドレスとユーザーパス」を利用してはいつでも「閲覧」「編集」ができます。
+      <h1><span style="color: #1d3557;">指導者登録をしよう！</span></h1>
+      <h3>指導者登録は簡単です。ユーザー設定画面の「メガホン」ボタンを押してみましょう。
       </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
@@ -53,8 +53,8 @@
         <img src="/img/hometwo3.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">今日の練習は？</span></h1>
-     <h3>「陸上日記」は日々の練習メニューや気持ちなどを誰にも見られることなく自由に記録できます。
+    <h1><span style="color: #1d3557;">入力しよう！</span></h1>
+     <h3>メッセージが表示されました。「はい」と入力し「決定」を押しましょう。
      </h3>
     </div>
   </div>
@@ -62,8 +62,8 @@
      <!--3-->
      <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">ひと目で</span></h1>
-      <h3>ユーザー情報は「メールアドレスとユーザーパス」を利用してはいつでも「閲覧」「編集」ができます。
+      <h1><span style="color: #1d3557;">登録完了！</span></h1>
+      <h3>画面下にメッセージが表示されました。指導者登録が完了しました！
       </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
@@ -77,8 +77,8 @@
         <img src="/img/hometwo5.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">今日の練習は？</span></h1>
-     <h3>「陸上日記」は日々の練習メニューや気持ちなどを誰にも見られることなく自由に記録できます。
+    <h1><span style="color: #1d3557;">検索種目を入力しよう！</span></h1>
+     <h3>画面の「虫眼鏡」マークを押すと検索種目を入力する事ができます。
      </h3>
     </div>
   </div>
@@ -86,8 +86,8 @@
      <!--5-->
      <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">ひと目で</span></h1>
-      <h3>ユーザー情報は「メールアドレスとユーザーパス」を利用してはいつでも「閲覧」「編集」ができます。
+      <h1><span style="color: #1d3557;">紹介文を入力しよう！</span></h1>
+      <h3>紹介文で自分をアピールしましょう！
       </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
@@ -95,17 +95,6 @@
     </div>
     </div>
 
-            <!--4-->
-    <div class="about">
-      <div class="aboutImage" data-aos="fade-up" data-aos-duration="1000">
-        <img src="/img/hometwo7.png" alt="">
-      </div>
-    <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">今日の練習は？</span></h1>
-     <h3>「陸上日記」は日々の練習メニューや気持ちなどを誰にも見られることなく自由に記録できます。
-     </h3>
-    </div>
-  </div>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
