--- a/public/hometwo.html
+++ b/public/hometwo.html
@@ -39,9 +39,10 @@
 
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">HOME</span></h1>
-        <h3>ユーザー情報を「登録」「閲覧」「編集」できるページです。
-          また、日々の練習内容を記録できる「陸上日記」サービスもご利用できます。</h3>
+      <h1><span style="color: #1d3557;">登録は１分で完了します！</span></h1>
+        <h3>まずTELLアプリをダウンロードしましょう。
+          登録画面にて情報を記入します。登録ボタンを押して登録完了です！
+        </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
       <img src="/img/hometwo1.png" alt="" height="650px" width="500px">
@@ -55,9 +56,9 @@
         <img src="/img/hometwo2.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">１度だけ</span></h1>
-     <h3>登録を行うことで試合申込み時に自動的に「選手名」
-       「登録陸連」「所属団体」などの試合申込み時に必要な情報が入力されます。何度も記入する手間が省けます。
+    <h1><span style="color: #1d3557;">ユーザー設定をしましょう</span></h1>
+     <h3>登録後すぐに利用ができますが、ユーザー設定画面で自分の情報を入力することで
+       自分を表現する事ができます！
      </h3>
     </div>
   </div>
