--- a/public/message.html
+++ b/public/message.html
@@ -38,9 +38,10 @@
 
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">HOME</span></h1>
-        <h3>ユーザー情報を「登録」「閲覧」「編集」できるページです。
-          また、日々の練習内容を記録できる「陸上日記」サービスもご利用できます。</h3>
+      <h1><span style="color: #1d3557;">メッセージを送ってみよう！</span></h1>
+        <h3>コーチを探し、指導を受けたいと思ったコーチにメッセージを送ってみましょう。
+          コーチとのやりとりが開始されます。
+        </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
       <img src="/img/message.png" alt="" height="650px" width="500px">
@@ -54,9 +55,8 @@
         <img src="/img/message2.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">１度だけ</span></h1>
-     <h3>登録を行うことで試合申込み時に自動的に「選手名」
-       「登録陸連」「所属団体」などの試合申込み時に必要な情報が入力されます。何度も記入する手間が省けます。
+    <h1><span style="color: #1d3557;">初めてのメッセージ</span></h1>
+     <h3>メッセージで「指導をお願いしたい」とメッセージを送ってみましょう。
      </h3>
     </div>
   </div>
@@ -64,8 +64,8 @@
     <!--3-->
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">ひと目で</span></h1>
-      <h3>ユーザー情報は「メールアドレスとユーザーパス」を利用してはいつでも「閲覧」「編集」ができます。
+      <h1><span style="color: #1d3557;">トーク画面</span></h1>
+      <h3>トーク画面ではやりとりを行っているコーチとトーク内容が表示されます。
       </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
@@ -81,8 +81,8 @@
         <img src="/img/message4.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">今日の練習は？</span></h1>
-     <h3>「陸上日記」は日々の練習メニューや気持ちなどを誰にも見られることなく自由に記録できます。
+    <h1><span style="color: #1d3557;">コーチからのメッセージ</span></h1>
+     <h3>コーチからメッセージが届きました！内容を確認してみましょう！
      </h3>
     </div>
   </div>
@@ -90,8 +90,9 @@
  <!--5-->
  <div class="landing">
   <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-  <h1><span style="color: #1d3557;">ひと目で</span></h1>
-  <h3>ユーザー情報は「メールアドレスとユーザーパス」を利用してはいつでも「閲覧」「編集」ができます。
+  <h1><span style="color: #1d3557;">指導料のお支払い</span></h1>
+  <h3>指導は指導料金をコーチにお支払いしてから開始されます。
+    コーチの指示に従い指導料金をお支払いしましょう。
   </h3>
 </div>
 <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
@@ -106,8 +107,9 @@
     <img src="/img/message6.png" alt="">
   </div>
 <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-<h1><span style="color: #1d3557;">今日の練習は？</span></h1>
- <h3>「陸上日記」は日々の練習メニューや気持ちなどを誰にも見られることなく自由に記録できます。
+<h1><span style="color: #1d3557;">お支払い完了！</span></h1>
+ <h3>お支払いが完了するとコーチからメッセージが届き指導が開始されます！
+   コーチに自分の悩みを送りましょう！
  </h3>
 </div>
 </div>
