--- a/public/messagetwo.html
+++ b/public/messagetwo.html
@@ -38,9 +38,10 @@
 
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">HOME</span></h1>
-        <h3>ユーザー情報を「登録」「閲覧」「編集」できるページです。
-          また、日々の練習内容を記録できる「陸上日記」サービスもご利用できます。</h3>
+      <h1><span style="color: #1d3557;">オンライン機能</span></h1>
+        <h3>相手のユーザーがアプリを開いている時、トーク画面の丸いマークが緑色に変化します。
+          オンラインしていない場合は灰色です。
+        </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
       <img src="/img/messagetwo.png" alt="" height="650px" width="500px">
@@ -54,9 +55,8 @@
         <img src="/img/messagetwo2.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">１度だけ</span></h1>
-     <h3>登録を行うことで試合申込み時に自動的に「選手名」
-       「登録陸連」「所属団体」などの試合申込み時に必要な情報が入力されます。何度も記入する手間が省けます。
+    <h1><span style="color: #1d3557;">通知機能</span></h1>
+     <h3>メッセージが届くとスマートフォンに通知が表示されます。ご確認下さい。
      </h3>
     </div>
   </div>
@@ -64,8 +64,9 @@
     <!--3-->
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">ひと目で</span></h1>
-      <h3>ユーザー情報は「メールアドレスとユーザーパス」を利用してはいつでも「閲覧」「編集」ができます。
+      <h1><span style="color: #1d3557;">写真送信機能</span></h1>
+      <h3>文章とは別に写真を送信する事ができます。
+        指導の際、文字より写真で表現した方が伝わりやすい場合もありますので、ご利用下さい。
       </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
@@ -79,8 +80,8 @@
         <img src="/img/messagetwo4.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">今日の練習は？</span></h1>
-     <h3>「陸上日記」は日々の練習メニューや気持ちなどを誰にも見られることなく自由に記録できます。
+    <h1><span style="color: #1d3557;">写真の削除と表示機能</span></h1>
+     <h3>自分が送った写真は送信後、削除する事ができます。また、大きく表示することも可能です。
      </h3>
     </div>
   </div>
@@ -88,8 +89,8 @@
     <!--5-->
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">ひと目で</span></h1>
-      <h3>ユーザー情報は「メールアドレスとユーザーパス」を利用してはいつでも「閲覧」「編集」ができます。
+      <h1><span style="color: #1d3557;">相手の写真</span></h1>
+      <h3>相手から送られた写真を大きく表示する事ができます。削除する事はできません。
       </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
@@ -103,8 +104,8 @@
         <img src="/img/messagetwo6.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">今日の練習は？</span></h1>
-     <h3>「陸上日記」は日々の練習メニューや気持ちなどを誰にも見られることなく自由に記録できます。
+    <h1><span style="color: #1d3557;">メッセージの削除</span></h1>
+     <h3>写真と同様に送ったメッセージを削除する事ができます。
      </h3>
     </div>
   </div>
@@ -112,8 +113,9 @@
     <!--7-->
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">ひと目で</span></h1>
-      <h3>ユーザー情報は「メールアドレスとユーザーパス」を利用してはいつでも「閲覧」「編集」ができます。
+      <h1><span style="color: #1d3557;">送信メッセージ</span></h1>
+      <h3>メッセージを送って際「送信」と表示されます。これは相手がメッセージを
+        読んでいない時に表示されます。
       </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
@@ -127,8 +129,8 @@
         <img src="/img/messagetwo8.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">今日の練習は？</span></h1>
-     <h3>「陸上日記」は日々の練習メニューや気持ちなどを誰にも見られることなく自由に記録できます。
+    <h1><span style="color: #1d3557;">既読メッセージ</span></h1>
+     <h3>相手がメッセージを読むと「既読」となります。
      </h3>
     </div>
   </div>
