--- a/public/search.html
+++ b/public/search.html
@@ -31,9 +31,10 @@
 
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">HOME</span></h1>
-        <h3>ユーザー情報を「登録」「閲覧」「編集」できるページです。
-          また、日々の練習内容を記録できる「陸上日記」サービスもご利用できます。</h3>
+      <h1><span style="color: #1d3557;">コーチを探そう！</span></h1>
+        <h3>「コーチを探す」画面でコーチを探してみましょう！
+          指導を受けたい種目を入力して下さい。
+        </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
       <img src="/img/search.png" alt="" height="650px" width="500px">
@@ -47,9 +48,9 @@
         <img src="/img/search2.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">１度だけ</span></h1>
-     <h3>登録を行うことで試合申込み時に自動的に「選手名」
-       「登録陸連」「所属団体」などの試合申込み時に必要な情報が入力されます。何度も記入する手間が省けます。
+    <h1><span style="color: #1d3557;">気になったコーチを選んでみよう！</span></h1>
+     <h3>コーチが表示されます。気になったコーチを選んでみましょう。プロフィールを見ると
+       コーチの詳しい情報が表示されます。
      </h3>
     </div>
   </div>
@@ -57,8 +58,8 @@
     <!--3-->
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">ひと目で</span></h1>
-      <h3>ユーザー情報は「メールアドレスとユーザーパス」を利用してはいつでも「閲覧」「編集」ができます。
+      <h1><span style="color: #1d3557;">コーチを知ろう！</span></h1>
+      <h3>コーチのプロフィール画面です。指導を受けたいと思ったらメッセージを送っていみましょう！
       </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
