--- a/public/index.html
+++ b/public/index.html
@@ -46,8 +46,7 @@
       </div>
     <div class= "aboutText" data-aos="fade-left" data-aos-duration="1000">
     <h1><span style="color: #1d3557;">いつでも　どこからでも</span></h1>
-     <h3>チャット機能を利用し、いつでも、どこからでもコーチから指導を受ける事ができます。自分の悩みや
-       疑問、課題を相談してみましょう。（指導は有料です。料金はコーチによって異なります。）
+     <h3>TELLとはチャット機能を利用し、自分が選んだコーチから指導を受ける事ができるアプリです。（指導は有料です。料金はコーチによって異なります。）
     </h3>
     </div>
   </div>
@@ -57,7 +56,7 @@
       <div class="landing2">
         <div class= "landingText2" data-aos="fade-up" data-aos-duration="1000">
         <h1><span style="color: #1d3557;">たくさんのコーチ</span></h1>
-        <h3>様々な経歴を持ったコーチがいらっしゃいます。自分の悩みや課題に合ったコーチを探してみましょう。</h3>
+        <h3>様々な経歴を持ったコーチがいらっしゃいます。自分の悩みや課題にあったコーチを探してみましょう。</h3>
       </div>
       <div class="landingImage2" data-aos="fade-down" data-aos-duration="1000">
         <img src="/img/index3.png" alt="" height="650px" width="500px">
@@ -86,7 +85,7 @@
           <div class="cardbgone"></div>
           <div class="cardContent">
             <h2>ユーザー登録　指導者登録</h2>
-            <p>登録は簡単で無料で使用する事ができます</p>
+            <p>登録は簡単!無料で使用する事ができます</p>
             <a href="home.html">
               <div class="cardBtn">
                 <img src="img/arrow.png" alt="" class="cardIcon">
@@ -99,10 +98,9 @@
           <img src="img/card2.png" class="cardtwoImg" alt =""data-aos="fade-up" data-aos-duration="1200">
           <div class="cardbgtwo"></div>
           <div class="cardContent">
-            <h2>ユーザー設定をしよう！</h2>
-            <p>本来の試合申込みフローより、簡単に、シンプルに試合に申し込むことが出来ます。 </p> 
-            <p>試合結果を保存することが出来ます。</p>
-            <a href="game.html">
+            <h2>コーチを探そう！</h2>
+            <p>たくさんのコーチがいらっしゃいます。自分の課題にあったコーチを探してみましょう！ </p> 
+            <a href="search.html">
               <div class="cardBtn">
                 <img src="img/arrow.png" alt="" class="cardIcon">
               </div>
@@ -117,9 +115,9 @@
           <img src="img/card3.png" class="cardthreeImg" alt =""data-aos="fade-up" data-aos-duration="1200">
           <div class="cardbgthree"></div>
           <div class="cardContent">
-            <h2>コーチを探そう！</h2>
-            <p>リレーオーダー表の提出を自由な場所で簡単に、スマートフォンから行うことが出来ます。</p>
-            <a href="relay.html">
+            <h2>指導を受けよう！</h2>
+            <p>チャット機能を使い、コーチから直接指導を受ける事ができます。</p>
+            <a href="message.html">
               <div class="cardBtn">
                 <img src="img/arrow.png" alt="" class="cardIcon">
               </div>
@@ -131,9 +129,9 @@
           <img src="img/card4.png" class="cardfourImg" alt =""data-aos="fade-up" data-aos-duration="1200">
           <div class="cardbgfour"></div>
           <div class="cardContent">
-            <h2>指導を受けよう！</h2>
-            <p>面倒だった試合作成、申込みの処理、リレーオーダー表の処理をシステムが手助けしてくれます。</p>
-            <a href="manager.html">
+            <h2>ユーザー設定！</h2>
+            <p>自分だけのページで、自分をアピールしましょう！</p>
+            <a href="setting.html">
               <div class="cardBtn">
                 <img src="img/arrow.png" alt="" class="cardIcon">
               </div>
