--- a/public/setting.html
+++ b/public/setting.html
@@ -38,9 +38,9 @@
 
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">HOME</span></h1>
-        <h3>ユーザー情報を「登録」「閲覧」「編集」できるページです。
-          また、日々の練習内容を記録できる「陸上日記」サービスもご利用できます。</h3>
+      <h1><span style="color: #1d3557;">選手のユーザー設定</span></h1>
+        <h3>ユーザーの紹介文に今の悩みを記入する事でコーチはあなたの悩みを理解しやすくなります。
+          また、写真を自分の好みに変更するのも面白いかもしれません。</h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
       <img src="/img/setting.png" alt="" height="650px" width="500px">
@@ -54,9 +54,8 @@
         <img src="/img/setting2.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">１度だけ</span></h1>
-     <h3>登録を行うことで試合申込み時に自動的に「選手名」
-       「登録陸連」「所属団体」などの試合申込み時に必要な情報が入力されます。何度も記入する手間が省けます。
+    <h1><span style="color: #1d3557;">写真や名前を変更したい</span></h1>
+     <h3>変更したい写真や名前をタップする事で変更できます。
      </h3>
     </div>
   </div>
@@ -64,8 +63,9 @@
     <!--3-->
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">ひと目で</span></h1>
-      <h3>ユーザー情報は「メールアドレスとユーザーパス」を利用してはいつでも「閲覧」「編集」ができます。
+      <h1><span style="color: #1d3557;">紹介文を変更</span></h1>
+      <h3>自分の悩みや課題、目標を記入してみましょう。
+        コーチがその内容に沿って指導をしてくれるはずです。
       </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
@@ -79,8 +79,9 @@
         <img src="/img/setting4.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">今日の練習は？</span></h1>
-     <h3>「陸上日記」は日々の練習メニューや気持ちなどを誰にも見られることなく自由に記録できます。
+    <h1><span style="color: #1d3557;">このは何？</span></h1>
+     <h3>イラストをタップする事で変更が可能ですが、選手の皆さんには関係のない項目です。
+       興味のある方は変更してみましょう。
      </h3>
     </div>
   </div>
