--- a/public/settingtwo.html
+++ b/public/settingtwo.html
@@ -38,9 +38,10 @@
 
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">HOME</span></h1>
-        <h3>ユーザー情報を「登録」「閲覧」「編集」できるページです。
-          また、日々の練習内容を記録できる「陸上日記」サービスもご利用できます。</h3>
+      <h1><span style="color: #1d3557;">指導者のユーザー登録</span></h1>
+        <h3>指導者の方々にとってユーザー登録は大変重要なページになります。選手は
+          このページの情報をみてコーチを探すのでしっかり選手にアピールしましょう！
+        </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
       <img src="/img/settingtwo.png" alt="" height="650px" width="500px">
@@ -54,9 +55,8 @@
         <img src="/img/settingtwo2.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">１度だけ</span></h1>
-     <h3>登録を行うことで試合申込み時に自動的に「選手名」
-       「登録陸連」「所属団体」などの試合申込み時に必要な情報が入力されます。何度も記入する手間が省けます。
+    <h1><span style="color: #1d3557;">指導者登録の変更</span></h1>
+     <h3>メガホンマークを押す事で指導者登録の内容を変更する事ができます。
      </h3>
     </div>
   </div>
@@ -64,8 +64,8 @@
     <!--3-->
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">ひと目で</span></h1>
-      <h3>ユーザー情報は「メールアドレスとユーザーパス」を利用してはいつでも「閲覧」「編集」ができます。
+      <h1><span style="color: #1d3557;">検索競技</span></h1>
+      <h3>虫眼鏡マークを押す事で検索競技の内容を変更する事ができます。
       </h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
@@ -79,8 +79,9 @@
         <img src="/img/settingtwo4.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">今日の練習は？</span></h1>
-     <h3>「陸上日記」は日々の練習メニューや気持ちなどを誰にも見られることなく自由に記録できます。
+    <h1><span style="color: #1d3557;">SNSを登録しよう</span></h1>
+     <h3>SNSマークを押す事で自分のSNSを登録する事ができます。登録したページを選手は閲覧する事ができるので
+       登録してみましょう！
      </h3>
     </div>
   </div>
@@ -88,8 +89,8 @@
    <!--5-->
    <div class="landing">
     <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">ひと目で</span></h1>
-    <h3>ユーザー情報は「メールアドレスとユーザーパス」を利用してはいつでも「閲覧」「編集」ができます。
+    <h1><span style="color: #1d3557;">写真　名前を変更しよう！</span></h1>
+    <h3>変更したい名前や写真を押すと、内容を変更する事ができます。
     </h3>
   </div>
   <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
@@ -103,8 +104,8 @@
       <img src="/img/settingtwo6.png" alt="">
     </div>
   <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-  <h1><span style="color: #1d3557;">今日の練習は？</span></h1>
-   <h3>「陸上日記」は日々の練習メニューや気持ちなどを誰にも見られることなく自由に記録できます。
+  <h1><span style="color: #1d3557;">紹介内容を変更しよう！</span></h1>
+   <h3>自分の経歴や資格、得意なことなど好きなことを記入し自分をアピールしてみましょう！
    </h3>
   </div>
 </div>
