--- a/public/home.html
+++ b/public/home.html
@@ -40,7 +40,7 @@
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
       <h1><span style="color: #1d3557;">TELL</span></h1>
-        <h3>スマートフォンを利用し自分が選んだコーチから指導を受ける事ができます。</h3>
+        <h3>スマートフォンを利用し自分が選んだコーチから指導を受ける事ができるスマホアプリです。</h3>
     </div>
     <div class="landingImage" data-aos="fade-up" data-aos-duration="1000">
       <img src="/img/home.png" alt="" height="650px" width="500px">
