--- a/public/homethree.html
+++ b/public/homethree.html
@@ -38,7 +38,7 @@
     <!--1-->
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">指導者登録をしよう！</span></h1>
+      <h1><span style="color: #1d3557;">指導者登録をしよう</span></h1>
       <h3>指導者登録は簡単です。ユーザー設定画面の「メガホン」ボタンを押してみましょう。
       </h3>
     </div>
@@ -53,7 +53,7 @@
         <img src="/img/hometwo3.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">入力しよう！</span></h1>
+    <h1><span style="color: #1d3557;">入力しよう</span></h1>
      <h3>メッセージが表示されました。「はい」と入力し「決定」を押しましょう。
      </h3>
     </div>
@@ -77,7 +77,7 @@
         <img src="/img/hometwo5.png" alt="">
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
-    <h1><span style="color: #1d3557;">検索種目を入力しよう！</span></h1>
+    <h1><span style="color: #1d3557;">検索種目を入力しよう</span></h1>
      <h3>画面の「虫眼鏡」マークを押すと検索種目を入力する事ができます。
      </h3>
     </div>
@@ -86,7 +86,7 @@
      <!--5-->
      <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
-      <h1><span style="color: #1d3557;">紹介文を入力しよう！</span></h1>
+      <h1><span style="color: #1d3557;">紹介文を入力しよう</span></h1>
       <h3>紹介文で自分をアピールしましょう！
       </h3>
     </div>
