--- a/public/message.html
+++ b/public/message.html
@@ -56,7 +56,7 @@
       </div>
     <div class= "aboutText" data-aos="fade-up" data-aos-duration="1000">
     <h1><span style="color: #1d3557;">初めてのメッセージ</span></h1>
-     <h3>メッセージで「指導をお願いしたい」とメッセージを送ってみましょう。
+     <h3>「指導をお願いしたい」とメッセージを送ってみましょう。
      </h3>
     </div>
   </div>
