--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <div class="landing">
       <div class= "landingText" data-aos="fade-up" data-aos-duration="1000">
       <h1><span style="color: #1d3557;">TELL</span></h1>
-      <h3>スマートフォンで部活動をしましょう。</h3>
+      <h3>スマートフォンで部活動を始めましょう。</h3>
     </div>
     <div class="landingImage" data-aos="fade-down" data-aos-duration="1000">
       <img src="/img/index1.png" alt="" height="650px" width="500px">
